[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmem"
version = "0.1.0"
description = "Financial-agent memory layer with bitemporal, audit, and erasure support"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis[hiredis]>=5.0.0",
    "cryptography>=42.0.0",
    "voyageai>=0.2.3",
    "openai>=1.30.0",
    "anthropic>=0.103.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pgvector>=0.3.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agentmem/src/agentmem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agentmem/tests"]
pythonpath = ["agentmem"]

[tool.ruff]
line-length = 100
