[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lians"
version = "0.1.0"
description = "Financial-grade AI memory — bitemporal facts, SEC 17a-4 audit chain, GDPR crypto-shred"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = [
    "ai", "memory", "agents", "finance", "compliance",
    "bitemporal", "audit", "SEC", "FINRA", "GDPR"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
http2 = ["httpx[http2]>=0.27"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage      = "https://github.com/ebeirne/Lians"
Repository    = "https://github.com/ebeirne/Lians"
Documentation = "https://github.com/ebeirne/Lians#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/lians"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
