[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lian-sdk"
version = "0.1.1"
description = "Financial-grade AI memory — bitemporal facts, SEC 17a-4 audit chain, GDPR crypto-shred"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
readme = "README.md"
keywords = ["ai", "memory", "finance", "agents", "langchain", "langgraph", "crewai", "compliance", "bitemporal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
langchain     = ["langchain-core>=0.2"]
langgraph     = ["langchain-core>=0.2", "langgraph>=0.1"]
crewai        = ["crewai>=0.28"]
openai-agents = ["openai-agents>=0.0.1"]
autogen       = ["autogen-core>=0.4"]
local         = ["sqlalchemy>=2.0", "aiosqlite>=0.19"]
mcp           = ["mcp>=1.0.0", "httpx>=0.27.0"]
all           = [
    "lian-sdk[langchain,langgraph,crewai,openai-agents,autogen,local,mcp]",
]

[project.scripts]
lian-mcp = "lian.mcp_server:main"

[project.urls]
Homepage      = "https://github.com/ebeirne/Lian"
Repository    = "https://github.com/ebeirne/Lian"
Documentation = "https://github.com/ebeirne/Lian#readme"

[tool.hatch.build.targets.wheel]
packages = ["lian"]
