[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lians-sdk"
version = "0.3.3"
description = "Financial-grade AI memory — bitemporal facts, SEC 17a-4 audit chain, GDPR crypto-shred"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
readme = "README.md"
keywords = ["ai", "memory", "finance", "agents", "langchain", "langgraph", "crewai", "compliance", "bitemporal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
langchain     = ["langchain-core>=0.2"]
langgraph     = ["langchain-core>=0.2", "langgraph>=0.1"]
crewai        = ["crewai>=0.28"]
openai-agents = ["openai-agents>=0.0.1"]
autogen       = ["autogen-core>=0.4"]
local         = [
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "cryptography>=42",
    "pgvector>=0.2.5",
    "numpy>=1.26",
    "fastapi>=0.110",
    # engine's db module builds its (unused-in-local-mode) default engine at
    # import time, which requires the asyncpg dialect to be importable
    "asyncpg>=0.29",
]
mcp           = ["mcp>=1.0.0", "httpx>=0.27.0"]
all           = [
    "lians-sdk[langchain,langgraph,crewai,openai-agents,autogen,local,mcp]",
]

[project.scripts]
lians-mcp = "lians.mcp_server:main"

[project.urls]
Homepage      = "https://github.com/Lians-ai/Lians"
Repository    = "https://github.com/Lians-ai/Lians"
Documentation = "https://github.com/Lians-ai/Lians#readme"

[tool.hatch.build.targets.wheel]
packages = ["lians"]

# Vendor the service engine so LocalLiansClient works from an installed
# wheel (zero-setup local mode), not just a monorepo checkout. The SDK
# aliases lians_engine.lians -> src.lians at import time.
[tool.hatch.build.targets.wheel.force-include]
"../../src/lians" = "lians_engine/lians"
"_engine_init.py" = "lians_engine/__init__.py"

[tool.hatch.build]
exclude = ["**/__pycache__", "**/*.pyc"]
